addressing review comments
Signed-off-by: Bharathwaj G <bharath78910@gmail.com>