@@ -22,7 +22,6 @@ import org.opensearch.index.query.QueryShardContext;
 import org.opensearch.search.lookup.SearchLookup;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -83,8 +82,8 @@ public class StarTreeMapper extends ParametrizedFieldMapper {
                     );
                 }
                 paramMap.remove(MAX_LEAF_DOCS);
-                List<String> skipStarInDims = Arrays.asList(
-                    XContentMapValues.nodeStringArrayValue(paramMap.getOrDefault(SKIP_STAR_NODE_IN_DIMS, new ArrayList<String>()))
+                Set<String> skipStarInDims = new LinkedHashSet<>(
+                    List.of(XContentMapValues.nodeStringArrayValue(paramMap.getOrDefault(SKIP_STAR_NODE_IN_DIMS, new ArrayList<String>())))
                 );
                 paramMap.remove(SKIP_STAR_NODE_IN_DIMS);
                 StarTreeFieldConfiguration.StarTreeBuildMode buildMode = StarTreeFieldConfiguration.StarTreeBuildMode.fromTypeName(
